Bug 114545 - Manage conditional formatting dialog must disable OK button when invalid range is entered
Summary: Manage conditional formatting dialog must disable OK button when invalid rang...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.6.1 release
Hardware: All Linux (All)
: medium normal
Assignee: tagezi
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-18 20:34 UTC by Roman Kuznetsov
Modified: 2017-12-20 02:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2017-12-18 20:34:45 UTC
Description:
condition formatting disappear if try set two or more range for it in dialogue Manage conditional formatting

Steps to Reproduce:
1. Create a new spreadsheet in Calc
2. Create conditional formatting for cell A1 (i tried type "Condition")
3. Open dialogue "Manage conditional formatting" uses menu Format > Conditional formatting > Manage
4. Select your conditional formatting (A1)
5. Push button "Edit" in bottom of dialogue
6. In new window "Conditional formatting for A1" in line "Range:" enter A1:A10; B1:B10 and push button "OK"
7. In dialogue "Manage conditional formatting" we see, that our conditional formatting for A1 disappeared
8. UNDO don't works for this problem!

Actual Results:  
conditional formatting disappear

Expected Results:
conditional formatting don't disappear. 
May be need make a little window or label with a warning?


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:57.0) Gecko/20100101 Firefox/57.0
Comment 1 Mike Kaganski 2017-12-19 09:01:28 UTC
The bug is that the dialog does not disable "OK" button, when user enters an invalid range. It shows that it's invalid (by highlighting the field with red), but still allows confirming the change, which results in invalid format (which hopefully is removed from document, and not just hidden and doing funny tricks; not working UNDO is one indication that not everything might be good after the event).

(Note: The range must have no spaces in it. That's why OP's range "A1:A10; B1:B10" with a space after comma causes the problem.)

Changing the summary and confirming.
Comment 2 Commit Notification 2017-12-19 20:48:36 UTC
tagezi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7504af39686171ffb16e70f798d9ecf4ea98f1d3

tdf#114545 Enabling/Disabling Ok button depending on correct format

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-12-20 02:29:58 UTC
tagezi committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe31edb29e5e77bb60e3aa73ec6a0380314acc61&h=libreoffice-6-0

tdf#114545 Enabling/Disabling Ok button depending on correct format

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.