tdf#114545 Enabling/Disabling Ok button depending on correct format

Change-Id: Iab3c4363dda0260d16c7167946044c39c21b863a
Reviewed-on: https://gerrit.libreoffice.org/46790
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit 7504af39686171ffb16e70f798d9ecf4ea98f1d3)
Reviewed-on: https://gerrit.libreoffice.org/46823
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>